# nx-shard

./: .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  nuxt.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: release.js  version.cjs  version.js
src-client/: app.vue
src-client/assets/css/: main.css
src-client/components/: chat-system.vue  download-drawer.vue  game-card.vue  navigation-bar.vue  pagination.vue  profile-banner.vue  title-bar.vue  transfer-protocol-indicator.vue
src-client/composables/: anime.ts  downloads.ts  shardChat.ts  supabase.ts
src-client/interfaces/: chat.ts  ftp.ts  game.ts  user.ts
src-client/layouts/: authentication.vue  home.vue  watch-anime.vue
src-client/middleware/: authentication.global.ts
src-client/pages/: account.vue  device.vue  donate.vue  explore.vue  help.vue  index.vue  lan-play.vue  library.vue  news.vue
src-client/pages/admin/: dev-tool.vue  users.vue
src-client/pages/announcements/: [id].vue
src-client/pages/auth/: login.vue  onboard.vue  (+1 more)
src-client/stores/: account.ts  announcement.ts  ftp-manager.ts  game.ts  global.ts  transfer-protocol.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/configs/: constants.rs  defaults.rs  mod.rs
src-tauri/src/dbi/: ftp_discovery.rs  ftp_manager.rs  mod.rs
src-tauri/src/http/: proxy.rs
src-tauri/src/plugins/: mod.rs  plugin_manager.rs
src-tauri/src/torrent/: state.rs
(+15 files in other folders)
