[package]
name = "nx-shard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ares_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
librqbit = "8.1.1"
tauri-plugin-notification = "2"
tauri-plugin-stronghold = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tauri-plugin-os = "2"
env_logger = "0.11"
chrono = "0.4"
parking_lot = "0.12"
log = "0.4"
suppaftp = { version = "6.3", features = ["native-tls"] }
directories = "6.0.0"

[profile.dev.package.scrypt]
opt-level = 3

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
